--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                     <div class="col-xl-8 col-lg-7"><img class="img-fluid mb-3 mb-lg-0" src="assets/img/TNCounties.jpg" alt="..." /></div>
                     <div class="col-xl-4 col-lg-5">
                         <div class="featured-text text-center text-lg-left">
-                            <h4>Local Unemployment</h4>
+                            <h4><a href="/LAUS.html">Local Unemployment</a></h4>
                             <p class="text-black-50 mb-0">This page delivers updates on local area labor force and unemployment rate. Find more information on the Local Area Unemployment Statistics on the Bureau of Labor Statistics website:
                             <a href="https://www.bls.gov/lau/">LAUS.</a>
                             </p>
