--- a/LAUS.html
+++ b/LAUS.html
@@ -78,17 +78,14 @@
                 </div>
                 <!-- Project One Row-->
                 <div class="row gx-0 mb-5 mb-lg-0 justify-content-center">
-                    <div class="col-lg-6"><img class="img-fluid" src="assets/img/demo-image-01.jpg" alt="..." /></div>
-                    <div class="col-lg-6">
-                        <div class="bg-black text-center h-100 project">
-                            <div class="d-flex h-100">
-                                <div class="project-text w-100 my-auto text-center text-lg-left">
-                                    <h4 class="text-white">Misty</h4>
-                                    <p class="mb-0 text-white-50">An example of where you can put an image of a project, or anything else, along with a description.</p>
-                                    <hr class="d-none d-lg-block mb-0 ms-0" />
-                                </div>
-                            </div>
-                        </div>
+
+                    <div class="col-12">
+                      <iframe id="inlineFrameExample"
+    title="Inline Frame Example"
+    width="100%"
+    height="500"
+    src="maps/map21.html">
+</iframe>
                     </div>
                 </div>
                 <!-- Project Two Row-->
