--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <!-- Navigation-->
         <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
             <div class="container px-4 px-lg-5">
-                <a class="navbar-brand" href="#page-top">Start Bootstrap</a>
+                <a class="navbar-brand" href="#page-top">Welcome</a>
                 <button class="navbar-toggler navbar-toggler-right" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
                     Menu
                     <i class="fas fa-bars"></i>
@@ -38,8 +38,8 @@
             <div class="container px-4 px-lg-5 d-flex h-100 align-items-center justify-content-center">
                 <div class="d-flex justify-content-center">
                     <div class="text-center">
-                        <h1 class="mx-auto my-0 text-uppercase">Labor Statistics</h1>
-                        <h2 class="text-white-50 mx-auto mt-2 mb-5">A test for GNRC's economic updates</h2>
+                        <h1 class="mx-auto my-0 text-uppercase">Explore Middle Tennessee's Economic Landscape</h1>
+                        <h2 class="text-white-50 mx-auto mt-2 mb-5">Greater Nashville Regional Council Economic Indicators and Projects</h2>
                         <a class="btn btn-primary" href="#about">Get Started</a>
                     </div>
                 </div>
@@ -50,15 +50,22 @@
             <div class="container px-4 px-lg-5">
                 <div class="row gx-4 gx-lg-5 justify-content-center">
                     <div class="col-lg-8">
-                        <h2 class="text-white mb-4">Live Test</h2>
+                        <h2 class="text-white mb-4">About the Greater Nashville Regional Council</h2>
                         <p class="text-white-50">
                             The Greater Nashville Regional Council is _____ this is for updates on labor statistics.
                             <a href="https://www.bls.gov/lau/">Bureau of Labor Statistics.</a>
                             Find regularly updated projects below.
                         </p>
+                        <div class="col-lg-8">
+                            <h2 class="text-white mb-4">Background and Other Resources</h2>
+                            <p class="text-white-50">
+                                Here is where we can explain that it's a dynamic landscape, we're including economic development information as well as workforce development,
+                                 and it's all linked to environment (link to Ashleigh and Carson's work),
+                                 demographics and infrastructure (Elham's), as well as mobility and transportation issues.</a>
+                            </p>
                     </div>
                 </div>
-                <img class="img-fluid" src="assets/img/ipad.png" alt="..." />
+                <img class="img-fluid" src="assets/img/GNRC.jpg" alt="..." />
             </div>
         </section>
         <!-- Projects-->
@@ -162,7 +169,7 @@
                                 <i class="fas fa-map-marked-alt text-primary mb-2"></i>
                                 <h4 class="text-uppercase m-0">Address</h4>
                                 <hr class="my-4 mx-auto" />
-                                <div class="small text-black-50">4923 Market Street, Orlando FL</div>
+                                <div class="small text-black-50">220 Athens Way, Nashville TN</div>
                             </div>
                         </div>
                     </div>
@@ -172,7 +179,7 @@
                                 <i class="fas fa-envelope text-primary mb-2"></i>
                                 <h4 class="text-uppercase m-0">Email</h4>
                                 <hr class="my-4 mx-auto" />
-                                <div class="small text-black-50"><a href="#!">hello@yourdomain.com</a></div>
+                                <div class="small text-black-50"><a href="#!">jmccall@gnrc.org</a></div>
                             </div>
                         </div>
                     </div>
@@ -182,7 +189,7 @@
                                 <i class="fas fa-mobile-alt text-primary mb-2"></i>
                                 <h4 class="text-uppercase m-0">Phone</h4>
                                 <hr class="my-4 mx-auto" />
-                                <div class="small text-black-50">+1 (555) 902-8832</div>
+                                <div class="small text-black-50">+1 (615) 555-5555</div>
                             </div>
                         </div>
                     </div>
