reorder living wage page

--- a/LivingWage.html
+++ b/LivingWage.html
@@ -68,13 +68,7 @@ geographic variation in the cost of essential household expenses."<p>
                         <p>The purpose of this portal is to use MIT Living Wage data to examine the the industry and occupational mix in our region in the context of a living wage. This can be used to examine what qualifies as a "good job", it can also be used as an overall metric for the region's wages and thereby quality of life.</p>
                         <p>MIT breaks all of this information out by family size, allowing a reader to slice data in a variety of ways based on prevailing trends in a region or specific scenarios. We are able to access this information both for the counties that make up our region, and for the region as a whole.</p>
                         <p>Find the methodology here: <a href="https://livingwage.mit.edu/resources/Living-Wage-Users-Guide-Technical-Documentation-2021-05-21.pdf">Technical Documentation</a></p>
-                        <h2 class="section-heading">Technical Notes</h2>
-                        <p>In order to create the larger source dataset, we are pulling a number different datasets together. First, the information from MIT. Second, industry composition and wages. Third, occupational composition and wages. Finally, family composition per geography from the US Census.</p>
-                        <p>Living Wage Data: <a href="https://livingwage.mit.edu/states/47/locations">For the State of Tennessee</a></p>
-                        <p>Industry Data: <a href="https://www.bls.gov/cew/">Quarterly Census of Employment and Wages</a>, and GNRC's code for calling this data through the Bureau of Labor Statistics API: <a href="https://github.com/jomccall/LAUS">Github repository</a></p>
-                        <p>Occupational Data: This information is only available at a State level from the Bureau of Labor Statistics so special request has to be made from partners with proprietary analytics derived from the QCEW and Industry Occupation Matrix. <a href="https://jobseq.eqsuite.com/landing/all-tools">JobsEQ Analytics via the Nashville Area Chamber of Commerce</a></p>
-                        <p>Family Composition Data: <a href="https://data.census.gov/cedsci/table?q=family&tid=ACSST1Y2019.S1101">Census Bureau</a></p>
-                        <p>Repository for Composition of larger dataset: <a href="https://github.com/jomccall/LAUS">Github</a></p>
+
                         <h2 class="section-heading">Highlight Points</h2>
                         </div>
                         <p>The following figures are based on 2020 annual wage calculator data and 2020 Q1 industry and occupation data.<p>
@@ -103,6 +97,16 @@ src="maps/g_ranksprez.html">
                         <p>There are a few highlights when we examine this most recent quarter's data: ____________________________</p>
                         <p>For a more immersive data visualization, go here: ______(link to Tableau dash)<p>
                         <p>2021 Quarter 2 QCEW data is released in November 2021.</p>
+                        <h2 class="section-heading">Technical Notes</h2>
+                        <p>In order to create the larger source dataset, we are pulling a number different datasets together. First, the information from MIT. Second, industry composition and wages. Third, occupational composition and wages. Finally, family composition per geography from the US Census.</p>
+                        <p>Living Wage Data: <a href="https://livingwage.mit.edu/states/47/locations">For the State of Tennessee</a></p>
+                        <p>Industry Data: <a href="https://www.bls.gov/cew/">Quarterly Census of Employment and Wages</a>, and GNRC's code for calling this data through the Bureau of Labor Statistics API: <a href="https://github.com/jomccall/LAUS">Github repository</a></p>
+                        <p>Occupational Data: This information is only available at a State level from the Bureau of Labor Statistics so special request has to be made from partners with proprietary analytics derived from the QCEW and Industry Occupation Matrix. <a href="https://jobseq.eqsuite.com/landing/all-tools">JobsEQ Analytics via the Nashville Area Chamber of Commerce</a></p>
+                        <p>Family Composition Data: <a href="https://data.census.gov/cedsci/table?q=family&tid=ACSST1Y2019.S1101">Census Bureau</a></p>
+                        <p>Repository for Composition of larger dataset: <a href="https://github.com/jomccall/LAUS">Github</a></p>
+                        <h2 class="section-heading">Related Work and Organizations</h2>
+                        <p>There are other metrics that are used for calculating living wages and budgets. For example ___.<p>
+                        <p>Other organizations approach this topic in various ways. The Atlanta Regional Commission here: ____. <p>
                         <p>
                             Placeholder text by
                             <a href="http://spaceipsum.com/">Space Ipsum</a>
