--- a/LivingWage.html
+++ b/LivingWage.html
@@ -58,16 +58,10 @@
                 <div class="row gx-4 gx-lg-5 justify-content-center">
                     <div class="col-md-10 col-lg-8 col-xl-7">
                       <h2 class="section-heading">The Larger Context</h2>
-                        <p>The MIT Living Wage Calculator presents their work by stating that "Analysts and policymakers often compare income to the federal poverty threshold to determine
-an individual's ability to live within a certain standard of living. However, poverty thresholds do
-not account for living costs beyond a basic food budget. The federal poverty measure does not
-consider expenses like childcare and health care that must be covered by a person's income even
-as these factors affect a person's ability to work and manage hardships associated with balancing
-employment and other aspects of everyday life. Further, poverty thresholds do not account for
-geographic variation in the cost of essential household expenses."<p>
+                        <p>The MIT Living Wage Calculator presents their work by stating that most poverty measures don't even account for subsistence living beyond food costs. They have calculated this living wage based on a larger subsistence cost, notably not one that includes leisure or savings.<p>
                         <p>The purpose of this portal is to use MIT Living Wage data to examine the the industry and occupational mix in our region in the context of a living wage. This can be used to examine what qualifies as a "good job", it can also be used as an overall metric for the region's wages and thereby quality of life.</p>
                         <p>MIT breaks all of this information out by family size, allowing a reader to slice data in a variety of ways based on prevailing trends in a region or specific scenarios. We are able to access this information both for the counties that make up our region, and for the region as a whole.</p>
-                        <p>Find the methodology here: <a href="https://livingwage.mit.edu/resources/Living-Wage-Users-Guide-Technical-Documentation-2021-05-21.pdf">Technical Documentation</a></p>
+                        <p>Find the MIT methodology here: <a href="https://livingwage.mit.edu/resources/Living-Wage-Users-Guide-Technical-Documentation-2021-05-21.pdf">Technical Documentation</a></p>
 
                         <h2 class="section-heading">Highlight Points</h2>
                         </div>
@@ -106,7 +100,7 @@ src="maps/g_ranksprez.html">
                         <p>Repository for Composition of larger dataset: <a href="https://github.com/jomccall/LAUS">Github</a></p>
                         <h2 class="section-heading">Related Work and Organizations</h2>
                         <p>There are other metrics that are used for calculating living wages and budgets. For example ___.<p>
-                        <p>Other organizations approach this topic in various ways. The Atlanta Regional Commission here: ____. <p>
+                        <p>Other organizations approach this topic in various ways. The Atlanta Regional Commission here: ____. Greater MSP uses the MIT calculator as well with an average sized family of 2 parents and 2 children to assert a percentage of "jobs paying a family sustaining wage".<a href="https://www.greatermsp.org/regional-indicators-2020/">Their dashboard is here</a> <p>
                         <p>
                             Placeholder text by
                             <a href="http://spaceipsum.com/">Space Ipsum</a>
