ed example page

--- a/Education, Workforce, and Regional Talent.html
+++ b/Education, Workforce, and Regional Talent.html
@@ -62,46 +62,45 @@
                         <p>P2</p>
                         <p>P3</p>
                         <p>Some Link: <a href="https://livingwage.mit.edu/resources/Living-Wage-Users-Guide-Technical-Documentation-2021-05-21.pdf">Technical Documentation</a></p>
-
+                        <article class="mb-4">
+                        <div class="container px-4 px-lg-5">
+                                <div class="row gx-4 gx-lg-5 justify-content-center">
+                                    <div class="col-md-10 col-lg-8 col-xl-7">
                         <h2 class="section-heading">Highlight Points</h2>
-                        </div>
-                        <p>The dashboard below shows Certificate data from the educational year 2019-2020 from the Tennessee Colleges of Applied Technology. Certificate programs can be <p>
+                      </div></div>
+                        <p>EX: The dashboard below shows Certificate data from the educational year 2019-2020 from the Tennessee Colleges of Applied Technology.<p>
                         <div class='tableauPlaceholder' id='viz1631732690796' style='position: relative'><noscript><a href='#'><img alt='Dashboard 1 ' src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;20&#47;2020TCATCampuses&#47;Dashboard1&#47;1_rss.png' style='border: none' /></a></noscript><object class='tableauViz'  style='display:none;'><param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' /> <param name='embed_code_version' value='3' /> <param name='site_root' value='' /><param name='name' value='2020TCATCampuses&#47;Dashboard1' /><param name='tabs' value='no' /><param name='toolbar' value='yes' /><param name='static_image' value='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;20&#47;2020TCATCampuses&#47;Dashboard1&#47;1.png' /> <param name='animate_transition' value='yes' /><param name='display_static_image' value='yes' /><param name='display_spinner' value='yes' /><param name='display_overlay' value='yes' /><param name='display_count' value='yes' /><param name='language' value='en-US' /></object></div>                <script type='text/javascript'>                    var divElement = document.getElementById('viz1631732690796');                    var vizElement = divElement.getElementsByTagName('object')[0];                    if ( divElement.offsetWidth > 800 ) { vizElement.style.width='100%';vizElement.style.height=(divElement.offsetWidth*0.75)+'px';} else if ( divElement.offsetWidth > 500 ) { vizElement.style.width='100%';vizElement.style.height=(divElement.offsetWidth*0.75)+'px';} else { vizElement.style.width='100%';vizElement.style.height='1227px';}                     var scriptElement = document.createElement('script');                    scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';                    vizElement.parentNode.insertBefore(scriptElement, vizElement);                </script>
 <span class="caption text-muted">The Tennessee Bureau of Regents is the source for the above data.</span>
 </div>
-<p>The rate for the state: 56%<p>
-<p>The rate for the MPO region: 65%<p>
+<p>Takeaway 1<p>
+<p>Takeaway 2<p>
+  <p>The map below shows ____. Historically x, currently trending towards y.<p>
 <iframe id="inlineFrameExample"
 title="Inline Frame Example"
 width="100%"
 height="500"
 src="maps/g_ranksprez.html">
 </iframe>
-<span class="caption text-muted">The map above showcases the regional counties by rate of 6 digit occupational employment providing living wages.</span>
+<span class="caption text-muted">About the map</span>
 </div>
 
-                        <p>While the living wage data is not suggested for use over time, we can use it to examine the flux of jobs and wages quarterly in the relevant timespan. The figures below examine this timeseries.</p>
+<article class="mb-4">
+    <div class="container px-4 px-lg-5">
+        <div class="row gx-4 gx-lg-5 justify-content-center">
+            <div class="col-md-10 col-lg-8 col-xl-7"><p>Over time _____. Below, we can see where in the past month the trend has ticked __.</p>
                         <a href="#!"><img class="img-fluid" src="assets/img/linegraph.jpg" alt="..." /></a>
                         <span class="caption text-muted">We see the ratio rise steadily over the past year.</span>
                         <p>There are a few highlights when we examine this most recent quarter's data: ____________________________</p>
-                        <p>For a more immersive data visualization, go here: ______(link to Tableau dash)<p>
+                        <p>For a more immersive group of data visualizations, go here: ______(link to Tableau dash)<p>
                         <p>2021 Quarter 2 QCEW data is released in November 2021.</p>
                         <h2 class="section-heading">Technical Notes</h2>
-                        <p>In order to create the larger source dataset, we are pulling a number different datasets together. First, the information from MIT. Second, industry composition and wages. Third, occupational composition and wages. Finally, family composition per geography from the US Census.</p>
-                        <p>Living Wage Data: <a href="https://livingwage.mit.edu/states/47/locations">For the State of Tennessee</a></p>
-                        <p>Industry Data: <a href="https://www.bls.gov/cew/">Quarterly Census of Employment and Wages</a>, and GNRC's code for calling this data through the Bureau of Labor Statistics API: <a href="https://github.com/jomccall/LAUS">Github repository</a></p>
-                        <p>Occupational Data: This information is only available at a State level from the Bureau of Labor Statistics so special request has to be made from partners with proprietary analytics derived from the QCEW and Industry Occupation Matrix. <a href="https://jobseq.eqsuite.com/landing/all-tools">JobsEQ Analytics via the Nashville Area Chamber of Commerce</a></p>
-                        <p>Family Composition Data: <a href="https://data.census.gov/cedsci/table?q=family&tid=ACSST1Y2019.S1101">Census Bureau</a></p>
-                        <p>Repository for Composition of larger dataset: <a href="https://github.com/jomccall/LAUS">Github</a></p>
+                        <p>In order to create the larger source dataset, we are pulling a number different datasets together. First, ___(+ link). Second, ____(+ link). Third, ____(+ link). Finally, ___ (+ link).</p>
+                        <p>Repository for pulling, cleaning, and exporting (ex) BLS QCEW dataset: <a href="https://github.com/jomccall/LAUS">Github</a></p>
+                          <p>Github Repository for Composition of larger dataset for Tableau dash x: <a href="https://github.com/jomccall/LAUS">Github</a></p>
                         <h2 class="section-heading">Related Work and Organizations</h2>
-                        <p>There are other metrics that are used for calculating living wages and budgets. For example ___.<p>
-                        <p>Other organizations approach this topic in various ways. The Atlanta Regional Commission here: ____. Greater MSP uses the MIT calculator as well with an average sized family of 2 parents and 2 children to assert a percentage of "jobs paying a family sustaining wage".<a href="https://www.greatermsp.org/regional-indicators-2020/">Their dashboard is here</a> <p>
-                        <p>
-                            Placeholder text by
-                            <a href="http://spaceipsum.com/">Space Ipsum</a>
-                            &middot; Images by
-                            <a href="https://www.flickr.com/photos/nasacommons/">NASA on The Commons</a>
-                        </p>
+                        <p>There are other metrics that are used for calculating (topic). For example ___.<p>
+                        <p>Other organizations approach this topic in various ways. The Atlanta Regional Commission here: ____. Greater MSP uses the same/different tool as well <a href="https://www.greatermsp.org/regional-indicators-2020/">Their dashboard is here</a> <p>
+
                     </div>
                 </div>
             </div>
