--- a/Education, Workforce, and Regional Talent.html
+++ b/Education, Workforce, and Regional Talent.html
@@ -58,16 +58,18 @@
                 <div class="row gx-4 gx-lg-5 justify-content-center">
                     <div class="col-md-10 col-lg-8 col-xl-7">
                       <h2 class="section-heading">The Larger Context</h2>
+                        <p>Discussion about what this topic is, why it is important, what sorts of people and groups use this information... the basic ecosystem of the topic.
                         <p>P1<p>
                         <p>P2</p>
                         <p>P3</p>
-                        <p>Some Link: <a href="https://livingwage.mit.edu/resources/Living-Wage-Users-Guide-Technical-Documentation-2021-05-21.pdf">Technical Documentation</a></p>
+
                         <article class="mb-4">
                         <div class="container px-4 px-lg-5">
                                 <div class="row gx-4 gx-lg-5 justify-content-center">
                                     <div class="col-md-10 col-lg-8 col-xl-7">
                         <h2 class="section-heading">Highlight Points</h2>
                       </div></div>
+                      <p>Here you'll find the current status of data related to this topic at a high level and appropriate geographies. This would include both quick visualizations and stats as well as links to more in depth "data portals" on Tableau Public, ArcMap Online, GitHub, etc..<p>
                         <p>EX: The dashboard below shows Certificate data from the educational year 2019-2020 from the Tennessee Colleges of Applied Technology.<p>
                         <div class='tableauPlaceholder' id='viz1631732690796' style='position: relative'><noscript><a href='#'><img alt='Dashboard 1 ' src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;20&#47;2020TCATCampuses&#47;Dashboard1&#47;1_rss.png' style='border: none' /></a></noscript><object class='tableauViz'  style='display:none;'><param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' /> <param name='embed_code_version' value='3' /> <param name='site_root' value='' /><param name='name' value='2020TCATCampuses&#47;Dashboard1' /><param name='tabs' value='no' /><param name='toolbar' value='yes' /><param name='static_image' value='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;20&#47;2020TCATCampuses&#47;Dashboard1&#47;1.png' /> <param name='animate_transition' value='yes' /><param name='display_static_image' value='yes' /><param name='display_spinner' value='yes' /><param name='display_overlay' value='yes' /><param name='display_count' value='yes' /><param name='language' value='en-US' /></object></div>                <script type='text/javascript'>                    var divElement = document.getElementById('viz1631732690796');                    var vizElement = divElement.getElementsByTagName('object')[0];                    if ( divElement.offsetWidth > 800 ) { vizElement.style.width='100%';vizElement.style.height=(divElement.offsetWidth*0.75)+'px';} else if ( divElement.offsetWidth > 500 ) { vizElement.style.width='100%';vizElement.style.height=(divElement.offsetWidth*0.75)+'px';} else { vizElement.style.width='100%';vizElement.style.height='1227px';}                     var scriptElement = document.createElement('script');                    scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';                    vizElement.parentNode.insertBefore(scriptElement, vizElement);                </script>
 <span class="caption text-muted">The Tennessee Bureau of Regents is the source for the above data.</span>
@@ -92,12 +94,14 @@ src="maps/g_ranksprez.html">
                         <span class="caption text-muted">We see the ratio rise steadily over the past year.</span>
                         <p>There are a few highlights when we examine this most recent quarter's data: ____________________________</p>
                         <p>For a more immersive group of data visualizations, go here: ______(link to Tableau dash)<p>
-                        <p>2021 Quarter 2 QCEW data is released in November 2021.</p>
+                        <p>To see the exploratory data analysis conducted by GNRC analysts, go here: ___(link to Github repository)</p>
                         <h2 class="section-heading">Technical Notes</h2>
+                        <p>Here is where we share the basic Github repositories, the technicalities of survey collection and what that means for how we look at the data, links to all used datasets.<p>
                         <p>In order to create the larger source dataset, we are pulling a number different datasets together. First, ___(+ link). Second, ____(+ link). Third, ____(+ link). Finally, ___ (+ link).</p>
                         <p>Repository for pulling, cleaning, and exporting (ex) BLS QCEW dataset: <a href="https://github.com/jomccall/LAUS">Github</a></p>
                           <p>Github Repository for Composition of larger dataset for Tableau dash x: <a href="https://github.com/jomccall/LAUS">Github</a></p>
                         <h2 class="section-heading">Related Work and Organizations</h2>
+                        <p>This segment serves to share the work of other local organizations, as well as compare how we are choosing to share and analyze data related to this topic to how other groups are. Basically this is the rundown on where to go to further explore this topic outside of GNRC resources.<p>
                         <p>There are other metrics that are used for calculating (topic). For example ___.<p>
                         <p>Other organizations approach this topic in various ways. The Atlanta Regional Commission here: ____. Greater MSP uses the same/different tool as well <a href="https://www.greatermsp.org/regional-indicators-2020/">Their dashboard is here</a> <p>
 
