--- a/Education, Workforce, and Regional Talent.html
+++ b/Education, Workforce, and Regional Talent.html
@@ -58,49 +58,105 @@
                 <div class="row gx-4 gx-lg-5 justify-content-center">
                     <div class="col-md-10 col-lg-8 col-xl-7">
                       <h2 class="section-heading">The Larger Context</h2>
-                        <p>Discussion about what this topic is, why it is important, what sorts of people and groups use this information... the basic ecosystem of the topic.
-                        <p>P1<p>
-                        <p>P2</p>
-                        <p>P3</p>
-
-                        <article class="mb-4">
-                        <div class="container px-4 px-lg-5">
-                                <div class="row gx-4 gx-lg-5 justify-content-center">
-                                    <div class="col-md-10 col-lg-8 col-xl-7">
+                    </div><div>
+                        <p>The Middle Tennessee workforce is the regional population that is working or actively searching for work. At different points in time, various dynamics in our national and local economies have elevated the search and preparation of the workforce for high demand jobs to different levels. We are currently at a boiling point. The economic conditions that brought us here are described well in this study conducted for the Northern Middle Tennessee Workforce Board by the Nashville Area Chamber of Commerce in 2020:</p>
+                        <p>“In 2007 and again in 2010, the Center for Regional Economic Competitiveness (CREC) completed studies of labor market opportunities for the Nashville area. During this period, the annual unemployment rate went from a low of 5.2% in the Clarksville Metropolitan Statistical Area (MSA) to a height of 10.3%, while the Nashville MSA reached a peak of 9.5% from a low of 4.1%.1 These studies guided regional economic and workforce development efforts, and educational investments, for several years. In 2015, The Research Center of the Nashville Area Chamber of Commerce (Chamber) conducted an updated study that provided data and analysis of industry and occupational sectors driving the region’s jobs growth and prosperity offering insights into Nashville’s demand for workforce supply and identifying skills gaps that posed challenges for future industry growth and development. In 2019, unemployment in the Nashville MSA was trending towards historic lows with some counties dipping below 2.0%, while the nearby Clarksville MSA hovered near 4.0%.2 The economy was at full employment, meaning no workers who are able and willing are involuntarily unemployed.<p>
+                        <p> Meanwhile, the economy (as measured in terms of Gross Domestic Product [GDP]) for both regions continued to grow at a compound annual rate of 3.5% (Clarksville MSA) and 6.1% (Nashville MSA) with jobs for all industries growing at a rate of approximately 3.3% per year.3 The tight labor market, coupled with extraordinary economic growth, did not seem inclined to slow down. This elevated workforce to the region’s top issue, driving policy makers to consider what was needed to develop the talent base, recruit new workforce to the region, and increase workforce participation among Middle Tennesseans through training programs and workforce initiatives. Understanding labor force participation and who remains on the sidelines means consideration of innovations in outreach, training, recruitment practices, and public and private sector policies. Alignment of these systems supports equitable participation in the prosperity of the region.”</p>
+                        <p>**figure** line graph of unemployment geography selector</p>
+                        <p>**figure** line graph of GDP geography selector </p>
+                        <p>To paraphrase this excerpt, the unemployment rate was low, workers had choices, and economists call this a tight labor market. This elevated the conversation about intentional workforce development, bringing new pilot programs and public private partnerships online, bringing grant funding into the region, spurring the creation of internal upskilling programs at various companies, and increasing the work already being done by workforce development professionals of all stripes. Many see this set of conditions as an opportunity to examine opportunities to bring equity into the conversation by targeting those who have been left on the sidelines of our regional economy for pipelines to jobs with family sustaining wages and upward mobility. </p>
+                        <p>Today, the landscape is both similar and different in key ways. A global pandemic came on strong in the region in Spring of 2020. Businesses shut down, people stayed home, and the region saw a tragic death toll of (). Even now, in Autumn of 2021, many industries are operating at diminished capacities, with distancing and other safety measures still in place, or remotely. Layoffs (figures?), raises were put on hold, . What remains the same as the outlook did in early 2020 is the region’s critical need for talent. Manufacturing centers are short, restaurants are understaffed, marketing positions are sitting open for months, while the dynamics and reasons between industries may differ, the need is omnipresent.</p>
+                        <p>This page looks at this need from a few different angles. In the data driven segment the educational ecosystem of the region is examined first, followed by a profile of the area workforce. In the following segment segment some of the work of other organizations is highlighted as examples about what is being done to bridge this gap. This includes work by other researchers, private and public educational institutions, workforce development professionals, workforce boards, foundations and community groups focused on connecting people to good jobs, local governments, private companies, trade groups and unions, and so many more.</p>
+                        <p>This discussion also leads in to the analysis that is done on a couple of other pages, specifically regarding industry and occupation. What (link) industries are growing? What industries may not have high rates of growth but compose large portions or regional employment? What are the strong suits of each county in the region in question? Then, (link) what industries and occupations provide dignified employment for workers; where can you find wage growth, wrap around services like childcare and healthcare benefits? What industries and occupations employ diversely, and which do not? Both of these perspectives are equally as important when we are examining blah blah blah.
+                        <p>On this page we’re looking not only at what educators and training are doing for the workforce, but also at who makes up the workforce. Is participation representative of the area’s population? Does a substantial portion of the workforce have an educational attainment associated with living wages?</p>
+                        <p>The role of this page is to guide you in and around available data that is helpful in assessing the health of the local talent and workforce ecosystem, and direct you to resources that can help enhance understanding and answer your needs.</p>
+              </div>
+              </div>
+              </div>
+              <div>
+          </header>
+          <article class="mb-4">
+              <div class="container px-4 px-lg-5">
+                    <div class="row gx-4 gx-lg-5 justify-content-center">
+                       <div class="col-md-10 col-lg-8 col-xl-7">
                         <h2 class="section-heading">Highlight Points</h2>
-                      </div></div>
-                      <p>Here you'll find the current status of data related to this topic at a high level and appropriate geographies. This would include both quick visualizations and stats as well as links to more in depth "data portals" on Tableau Public, ArcMap Online, GitHub, etc..<p>
-                        <p>EX: The dashboard below shows Certificate data from the educational year 2019-2020 from the Tennessee Colleges of Applied Technology.<p>
-                        <div class='tableauPlaceholder' id='viz1631732690796' style='position: relative'><noscript><a href='#'><img alt='Dashboard 1 ' src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;20&#47;2020TCATCampuses&#47;Dashboard1&#47;1_rss.png' style='border: none' /></a></noscript><object class='tableauViz'  style='display:none;'><param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' /> <param name='embed_code_version' value='3' /> <param name='site_root' value='' /><param name='name' value='2020TCATCampuses&#47;Dashboard1' /><param name='tabs' value='no' /><param name='toolbar' value='yes' /><param name='static_image' value='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;20&#47;2020TCATCampuses&#47;Dashboard1&#47;1.png' /> <param name='animate_transition' value='yes' /><param name='display_static_image' value='yes' /><param name='display_spinner' value='yes' /><param name='display_overlay' value='yes' /><param name='display_count' value='yes' /><param name='language' value='en-US' /></object></div>                <script type='text/javascript'>                    var divElement = document.getElementById('viz1631732690796');                    var vizElement = divElement.getElementsByTagName('object')[0];                    if ( divElement.offsetWidth > 800 ) { vizElement.style.width='100%';vizElement.style.height=(divElement.offsetWidth*0.75)+'px';} else if ( divElement.offsetWidth > 500 ) { vizElement.style.width='100%';vizElement.style.height=(divElement.offsetWidth*0.75)+'px';} else { vizElement.style.width='100%';vizElement.style.height='1227px';}                     var scriptElement = document.createElement('script');                    scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';                    vizElement.parentNode.insertBefore(scriptElement, vizElement);                </script>
-<span class="caption text-muted">The Tennessee Bureau of Regents is the source for the above data.</span>
+                      </div><div>
+                        <p>Our highlights are broken into three big-picture areas: educational attainment, educational awards, and a workforce demographic profile.</p>
+                        <p><strong>Educational Attainment</strong></p>
+                        <p>A natural place to begin is by exploring the educational attainment of an area. This data is often obtained from the US Census Bureau surveys and that is what we use here. The most reliable data is from the American Community Survey 5-Year Estimates – representing an average over a period of 5 years. This is a good way to examine prevailing trends in an area; almost as if educational attainment is being examined as a demographic feature. The use of 5-year estimates also allows us to use the strength of data collected over 5 years to surpass the weakness of a small geographical sample size, for example, that of a block group. The ACS 5 Year estimates collect information about the following levels of attainment:
+	Less than 9th Grade
+	9th to 12th Grade, No Degree
+	High School Degree or Equivalent (meaning a GED)
+	Associates Degree
+	Some College No Degree
+	Bachelor’s Degree
+	Graduate Degree
+Each of these are associated with different levels of earnings, because they qualify individuals for different types of jobs. The visualization below gives a quick glimpse at the associated earnings in the State of Tennessee from the Census Bureau’s ACS 5 Year Estimates:
+*Tableau or just Python Plot*
+The interactive map below shows the percent of the county population with whatever attainment level selected. While the tooltip contains all levels, you are able to select either bachelor’s and above or high school and below at the top right to fill in the choropleth feature.
+</p>
 </div>
-<p>Takeaway 1<p>
-<p>Takeaway 2<p>
-  <p>The map below shows ____. Historically x, currently trending towards y.<p>
 <iframe id="inlineFrameExample"
 title="Inline Frame Example"
 width="100%"
 height="500"
-src="maps/g_ranksprez.html">
+src="maps/Ed_Wf_Talent/countyedattinment_bachplus.html">
+</iframe>
+<span class="caption text-muted">About the map</span>
+<div>
+<p>Over time _____. Below, we can see the lower levels of educational attainment associated with lower earnings.</p>
+<iframe id="inlineFrameExample"
+title="Inline Frame Example"
+width="100%"
+height="500"
+src="maps/Ed_Wf_Talent/countyedattinment_nohs.html">
 </iframe>
 <span class="caption text-muted">About the map</span>
 </div>
+<p>Next, the same information will be visualized at the <em>census tract</em> level. If you are wondering about a smaller geographical area, this sort of granularity can be helpful.</p>
 
-<article class="mb-4">
-    <div class="container px-4 px-lg-5">
-        <div class="row gx-4 gx-lg-5 justify-content-center">
-            <div class="col-md-10 col-lg-8 col-xl-7"><p>Over time _____. Below, we can see where in the past month the trend has ticked __.</p>
+
+
+
+<p><strong>Educational Awards</strong></p>
+<p></p>
+<p><strong>Workforce Profile</strong></p>
+
+
+
+
                         <a href="#!"><img class="img-fluid" src="assets/img/linegraph.jpg" alt="..." /></a>
                         <span class="caption text-muted">We see the ratio rise steadily over the past year.</span>
                         <p>There are a few highlights when we examine this most recent quarter's data: ____________________________</p>
                         <p>For a more immersive group of data visualizations, go here: ______(link to Tableau dash)<p>
                         <p>To see the exploratory data analysis conducted by GNRC analysts, go here: ___(link to Github repository)</p>
+                      </div>
+                      </div>
+                      </div>
+                      <div>
+                  </header>
+                  <article class="mb-4">
+                      <div class="container px-4 px-lg-5">
+                            <div class="row gx-4 gx-lg-5 justify-content-center">
+                               <div class="col-md-10 col-lg-8 col-xl-7">
                         <h2 class="section-heading">Technical Notes</h2>
+                      </div><div>
                         <p>Here is where we share the basic Github repositories, the technicalities of survey collection and what that means for how we look at the data, links to all used datasets.<p>
-                        <p>In order to create the larger source dataset, we are pulling a number different datasets together. First, ___(+ link). Second, ____(+ link). Third, ____(+ link). Finally, ___ (+ link).</p>
-                        <p>Repository for pulling, cleaning, and exporting (ex) BLS QCEW dataset: <a href="https://github.com/jomccall/LAUS">Github</a></p>
+                        <p>Educational attainment data is collected by the US Census Bureau through both their decennial census and their Current Population Survey.
+                          Individuals are asked “What is the highest grade of school ___ has completed, or the highest degree ___ has received?”
+                          The question has been incorporated into the Current Population Survey and the Census since 1940, and has been asked the same way as it is today since 1992.
+                          Find more information here: <a href="https://www.census.gov/topics/education/educational-attainment/about.html"><em>Series Information</em></a>.
+                          Next is the repository for the <a href="https://github.com/Greater-Nashville-Regional-Council/Educational-Attainment"><em>Educational Attainment</em></a> segment above.
+                          You will find how to call the Census API for the series data as well as the geographical data, format for mapping and tidydata, join the two, and produce maps for visual analysis.</p>
                           <p>Github Repository for Composition of larger dataset for Tableau dash x: <a href="https://github.com/jomccall/LAUS">Github</a></p>
-                        <h2 class="section-heading">Related Work and Organizations</h2>
+                          <div>
+                          </header>
+                          <article class="mb-4">
+                          <div class="container px-4 px-lg-5">
+                                <div class="row gx-4 gx-lg-5 justify-content-center">
+                                   <div class="col-md-10 col-lg-8 col-xl-7">
+                            <h2 class="section-heading">Related Work and Organizations</h2>
+                          </div><div>
                         <p>This segment serves to share the work of other local organizations, as well as compare how we are choosing to share and analyze data related to this topic to how other groups are. Basically this is the rundown on where to go to further explore this topic outside of GNRC resources.<p>
                         <p>There are other metrics that are used for calculating (topic). For example ___.<p>
                         <p>Other organizations approach this topic in various ways. The Atlanta Regional Commission here: ____. Greater MSP uses the same/different tool as well <a href="https://www.greatermsp.org/regional-indicators-2020/">Their dashboard is here</a> <p>
